adding social share buttons

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -48,6 +48,7 @@ ar:
       found: "معثور عليه"
       animals-in-need: "بحاجة لمساعدة"
       for_adoption: "للتبني"
+      search: "ابحث"
       in: "في"
       details: "التفاصيل"
       delete: 'حذف'
